# MCP-Security-Framework

./: .gitignore  3.0.0  CLAUDE.md  CONTRIBUTING.md  DV_MCP_TEST_RESULTS_V2.md  FRAMEWORK_OVERVIEW.md  LICENSE  README.md  SUMMARY_2025-10-15.md  TEST_RESULTS.md  UI_UPDATE_SUMMARY.md  WEB_VIEW_README.md  WEEKLY_REPORT_2025-10-15.md  commit_message.txt  mcpsf.py  pyproject.toml  requirements.txt  test_all_challenges_v2.sh  test_challenge1_with_report.py  test_detector_manual.py  web_view.py
Weekly report/: WEEKLY_PROJECT_UPDATE_2025-10-15.md  WEEKLY_PROJECT_UPDATE_2025-10-22.md  WEEKLY_PROJECT_UPDATE_2025-11-05.md  WEEKLY_PROJECT_UPDATE_2025-11-26.md
docker/: mcp-runner-node.Dockerfile  mcp-runner-python.Dockerfile
docs/: API_REFERENCE.md  ARCHITECTURE.md  DETECTORS_GUIDE.md  DOCUMENTATION_INDEX.md  OLD_AUTO_SANDBOX_ANALYSIS.md  README.md  REPORTS_GUIDE.md  WRAPPER_GUIDE.md  how_mcp_works.md
examples/: comprehensive_security_scan.py  manual_exploit_challenge1_prompt_injection.py  module_loader_demo.py  simple_module_loader_test.py  simple_module_test.py  test_dv_mcp_challenge1.py  test_dv_mcp_challenge2.py  test_official_time_server.py
reports/: comprehensive_scan_20251021_073158.json  comprehensive_scan_20251021_073629.json  comprehensive_scan_20251021_073654.json  comprehensive_scan_20251021_074245.json  comprehensive_scan_20251021_074415.json  comprehensive_scan_20251021_080107.json  comprehensive_scan_20251021_081126.json  comprehensive_scan_20251021_081604.json  comprehensive_scan_20251021_081619.json  manual_exploit_challenge1_20251021_072038.json
samples/: scope.yaml
scripts/: build-fat-images.sh
src/: __init__.py
targets/: .gitignore  README.md
templates/: assess.html  base.html  index.html  report.html
tests/: test_challenge1.py  test_challenge2.py  test_excel_mcp.py  test_github_mcp.py  test_markitdown_mcp.py  test_remote_sse.py  test_remote_sse_pipedream.py  (+2 more)
(+202 files in other folders)
